--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,8 +46,11 @@ services:
       OLLAMA_URL: http://ollama:11434
       DEFAULT_MODEL: qwen2.5:1.5b
       MAX_HISTORY_MESSAGES: 12
-      MODEL_NUM_CTX: 1024
+      MODEL_NUM_CTX: 2048
       REQUEST_TIMEOUT: 180
+      MAX_RESPONSE_TOKENS: 256
+      MODEL_NUM_THREAD: 8
+      MODEL_NUM_BATCH: 512
     expose:
       - "8000"
 
@@ -64,3 +67,4 @@ services:
 
 volumes:
   ollama_data:
+
